--- a/Makefile.conf
+++ b/Makefile.conf
@@ -43,6 +43,8 @@ WITH_GRAPHICS ?= $(shell if [ -f `ocamlfind query graphics 2> /dev/null`/graphic
 WITH_REACT ?= $(shell if [ -f `ocamlfind query reactiveData 2> /dev/null`/reactiveData.cma ]; then echo YES; else echo NO; fi)
 WITH_TYXML ?= $(shell if [ -f `ocamlfind query tyxml 2> /dev/null`/tyxml_f.cma ]; then echo YES; else echo NO; fi)
 
+WITH_ASYNC ?= $(shell if [ -f `ocamlfind query async_kernel 2> /dev/null`/async_kernel.cma ]; then echo YES; else echo NO; fi)
+
 WITH_FINDLIB?=YES
 
 NATDYNLINK ?= $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
