toplevel: async_kernel, core_kernel

--- a/toplevel/Makefile
+++ b/toplevel/Makefile
@@ -7,6 +7,7 @@ all: toplevel.js eval.js
 OCPINDENT=$(shell ocamlfind query ocp-indent -format "-package %p.lib" 2> /dev/null)
 HIGLO=$(shell ocamlfind query higlo.ocaml -format "-package %p -rectypes" 2> /dev/null)
 DERIVING=$(shell ocamlfind query js_of_ocaml.deriving -format "%p" 2> /dev/null)
+ASYNC=$(shell ocamlfind query js_of_ocaml.async -format "%p" 2> /dev/null)
 
 CPPO_OPT=
 ifneq ($(OCPINDENT),)
@@ -30,7 +31,7 @@ JSFILES= +weak.js +toplevel.js +dynlink.js +nat.js
 PACKAGES= \
 	lwt bigarray tyxml.functor \
 	react reactiveData \
-	js_of_ocaml $(DERIVING) \
+	js_of_ocaml $(DERIVING) $(ASYNC_PKG) \
 	js_of_ocaml.tyxml \
 	js_of_ocaml.toplevel \
 	dynlink
@@ -39,6 +40,11 @@ ifeq ($(WITH_GRAPHICS),YES)
 JSFILES += +graphics.js
 PACKAGES += graphics js_of_ocaml.graphics
 CPPO_OPT+= -D graphics
+endif
+
+ifneq ($(ASYNC),)
+ASYNC_PKG=core_kernel async_kernel js_of_ocaml.async
+JSFILES += +bin_prot.js +core_kernel.js
 endif
 
 ifeq ($(METAOCAML),1)
