Toplevel: do not link core_kernel in 64bit

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -29,6 +29,10 @@ ifeq ($(shell ocamlc -version | grep -q "^4."; echo $$?),0)
 WITH_TOPLEVEL =YES
 endif
 
+ifeq ($(shell ocamlc -config | grep -q "architecture: i386"; echo $$?),0)
+ARCH_32BIT=YES
+endif
+
 ifeq ($(shell ocamlc -safe-string 2> /dev/null ; echo $$?),0)
 SAFESTRING=-safe-string
 else
