--- a/toplevel/Makefile
+++ b/toplevel/Makefile
@@ -58,11 +58,12 @@ SYNTAXES=
 CPPO_OPT+= -D metaocaml
 endif
 
-#-jsopt "--pretty --disable shortvar"
+#-jsopt "--pretty"
 MKTOP=jsoo_mktop -verbose $(SAFESTRING) \
 	${addprefix -top-syntax , ${SYNTAXES}} \
 	-dont-export-unit gc \
 	-jsopt "--disable shortvar" \
+	-jsopt "--pretty" \
 	${addprefix -export-package , ${PACKAGES}} \
 	${addprefix -export-unit , html5_types html5_sigs xml_wrap } \
 
