--- a/examples/Makefile.common
+++ b/examples/Makefile.common
@@ -8,7 +8,7 @@ OCAMLC=ocamlfind ocamlc -g -package lwt -pp "camlp4o ../../lib/syntax/pa_js.cmo"
 STDLIB=$(LIBNAME).cma
 
 $(NAME).js: $(NAME).byte $(COMP) $(JSFILES)
-	$(COMP) --noruntime $(JSFILES) $(OPTIONS) --source-map $(NAME).byte --disable shortvar --pretty -I ../../../lwt
+	$(COMP) --noruntime $(JSFILES) $(OPTIONS) --source-map $(NAME).byte --pretty -I ../../../lwt
 
 $(NAME).byte: $(OBJS)
 	$(OCAMLC) -linkpkg -o $@ $(STDLIB) $^
