--- a/Makefile.conf
+++ b/Makefile.conf
@@ -25,10 +25,6 @@ OBJEXT := .o
 LIBEXT := .a
 DLLEXT := .so
 
-ifeq ($(shell ocamlc -version | grep -q "^4."; echo $$?),0)
-WITH_TOPLEVEL =YES
-endif
-
 ifeq ($(shell ocamlc -config | grep -q "architecture: i386"; echo $$?),0)
 ARCH_32BIT=YES
 endif
@@ -57,10 +53,11 @@ WITH_PPX_TOOLS ?= $(shell if [ -f `ocamlfind query ppx_tools 2> /dev/null`/ppx_t
 
 WITH_PPX_DERIVING ?= $(shell if [ -f `ocamlfind query ppx_deriving 2> /dev/null`/ppx_deriving.cma ]; then echo YES; else echo NO; fi)
 
-##disabled for ocaml < 4.02.2+trunk
+##disabled for ocaml < 4.02.2
 ifeq "${WITH_PPX_TOOLS}" "YES"
 ifneq ($(shell ocamlc -version | grep -q -E "4.02.[01]"; echo $$?),0)
 WITH_PPX ?= YES
+WITH_TOPLEVEL=YES
 endif
 endif
 
