--- a/Makefile.conf
+++ b/Makefile.conf
@@ -53,6 +53,8 @@ WITH_PPX_TOOLS ?= $(shell if [ -f `ocamlfind query ppx_tools 2> /dev/null`/ppx_t
 
 WITH_PPX_DERIVING ?= $(shell if [ -f `ocamlfind query ppx_deriving 2> /dev/null`/ppx_deriving.cma ]; then echo YES; else echo NO; fi)
 
+WITH_PPX_DRIVER ?= $(shell if [ -f `ocamlfind query ppx_driver 2> /dev/null`/ppx_driver.cma ]; then echo YES; else echo NO; fi)
+
 ##disabled for ocaml < 4.02.2
 ifeq "${WITH_PPX_TOOLS}" "YES"
 ifneq ($(shell ocamlc -version | grep -q -E "4.02.[01]"; echo $$?),0)
