--- a/Makefile.filelist
+++ b/Makefile.filelist
@@ -39,9 +39,19 @@ ifeq "${WITH_PPX}" "YES"
 OCAMLFIND_BIN += lib/ppx/${PPX}
 IMPL += lib/ppx/ppx_js.cma
 INTF += lib/ppx/*.cmi
+IMPL += lib/ppx/ppx_js.cmx lib/ppx/ppx_js.cmxa
 ifeq "${BEST}" "opt"
 ifeq "${NATDYNLINK}" "YES"
-IMPL += lib/ppx/ppx_js.cmx lib/ppx/ppx_js.cmxa lib/ppx/ppx_js.cmxs
+IMPL += lib/ppx/ppx_js.cmxs
+endif
+endif
+endif
+
+ifeq "${WITH_PPX}${WITH_PPX_DRIVER}" "YESYES"
+IMPL += lib/ppx_driver/ppx_js_driver.cma lib/ppx_driver/ppx_js_driver.cmx lib/ppx_driver/ppx_js_driver.cmxa
+ifeq "${BEST}" "opt"
+ifeq "${NATDYNLINK}" "YES"
+IMPL += lib/ppx_driver/ppx_js_driver.cmxs
 endif
 endif
 endif
