--- a/lib/Makefile
+++ b/lib/Makefile
@@ -240,17 +240,11 @@ ppx/ppx_deriving_json.cmxa: ppx/ppx_deriving_json.cmx
 ppx/ppx_deriving_json.cmxs: ppx/ppx_deriving_json.cmx
 	$(OCAMLOPT) -shared -o $@ $^
 
-dom_html.cmo: dom_html.ml syntax/pa_js.cmo
-	$(OCAMLC) -pp "camlp4o syntax/pa_js.cmo" $(SAFESTRING) -package lwt,uchar -c -g dom_html.ml
-
-dom_html.cmi: dom_html.mli
-	$(OCAMLC) -package lwt,uchar -I deriving_json $(SAFESTRING) -c dom_html.mli
-
 %.cmo: %.ml syntax/pa_js.cmo
-	$(OCAMLC) -pp "camlp4o syntax/pa_js.cmo" $(SAFESTRING) -package lwt -c -g $<
+	$(OCAMLC) -pp "camlp4o syntax/pa_js.cmo" $(SAFESTRING) -package lwt,uchar -c -g $<
 
 %.cmi: %.mli
-	$(OCAMLC) -package lwt -I deriving_json $(SAFESTRING) -c $<
+	$(OCAMLC) -package lwt,uchar -I deriving_json $(SAFESTRING) -c $<
 
 %.ml: %.mll
 	ocamllex $<
