--- a/Makefile.conf
+++ b/Makefile.conf
@@ -11,7 +11,7 @@ MINIFIER := jsoo_minify$(EXEEXT)
 MKTOP    := jsoo_mktop$(EXEEXT)
 MKCMIS   := jsoo_mkcmis$(EXEEXT)
 
-PPX   := ppx_js$(EXEXT)
+PPX   := ppx_js$(EXEEXT)
 # opt/byte
 BEST := opt
 
