Misc: camlp4 is optionnal

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -63,6 +63,8 @@ WITH_TOPLEVEL=YES
 endif
 endif
 
+WITH_CAMLP4 ?= $(shell if [ -f `ocamlfind query camlp4.extend 2> /dev/null`/Camlp4Parsers/Camlp4GrammarParser.cmo ]; then echo YES; else echo NO; fi)
+
 METAOCAML ?= 0
 
 VERSION_GIT := $(shell git log -n1 --pretty=format:%h 2> /dev/null)
