--- a/Makefile.conf
+++ b/Makefile.conf
@@ -8,6 +8,7 @@ LIBRARY  := js_of_ocaml
 LIBNAME  := js_of_ocaml$(LIBEXT)
 COMPILER := js_of_ocaml$(EXEEXT)
 MINIFIER := jsoo_minify$(EXEEXT)
+LINKER   := jsoo_link$(EXEEXT)
 MKTOP    := jsoo_mktop$(EXEEXT)
 MKCMIS   := jsoo_mkcmis$(EXEEXT)
 
