--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -1,7 +1,7 @@
 
 include ../Makefile.conf
 
-PACKAGES=cmdliner base64
+PACKAGES=cmdliner base64 yojson
 
 
 ifeq "${WITH_FINDLIB}" "YES"
@@ -13,7 +13,7 @@ FINDLIB_SUPPORT=jsoo_findlib_support.cma \
                 jsoo_findlib_support.cmxs
 endif
 
-all: $(COMPILER) $(MINIFIER) $(FINDLIB_SUPPORT) man
+all: $(COMPILER) $(MINIFIER) $(LINKER) $(FINDLIB_SUPPORT) man
 
 compilerlib: lib/compiler.cma lib/compiler.cmxa lib/compiler.cmxs lib/compiler.cmx
 	cp compiler.cmi compiler.a lib/
@@ -23,7 +23,7 @@ lib/%: %
 
 OBJS=compiler_version.cmx \
      util.cmx pretty_print.cmx option.cmx reserved.cmx varPrinter.cmx \
-     dgraph.cmx code.cmx javascript.cmx json.cmx vlq64.cmx source_map.cmx \
+     dgraph.cmx code.cmx javascript.cmx vlq64.cmx source_map.cmx \
      js_output.cmx js_simpl.cmx parse_info.cmx js_token.cmx js_parser.cmx \
      js_lexer.cmx parse_js.cmx jsoo_primitive.cmx annot_parser.cmx annot_lexer.cmx \
      instr.cmx jsoo_subst.cmx pure_fun.cmx jsoo_deadcode.cmx \
@@ -36,12 +36,16 @@ OBJS=compiler_version.cmx \
 
 COMPOBJS=$(OBJS) $(FINDLIB_SUPPORT_OBJ) commonArg.cmx compileArg.cmx jsoo_compile.cmx
 MINIOBJS=$(OBJS) commonArg.cmx minifyArg.cmx minify.cmx
+LINKEROBJS=$(OBJS) commonArg.cmx linkerArg.cmx link_js.cmx jsoo_link.cmx
 OCAMLC=ocamlfind ocamlc -g  -w +A-4-7-9-37-38-41-44-45-58
 OCAMLOPT=ocamlfind ocamlopt -g -w +A-4-7-9-37-38-41-44-45-58
 $(COMPILER): jsoo_compile.$(BEST)
 	mv -f $< $@
 
 $(MINIFIER): minify.$(BEST)
+	mv -f $< $@
+
+$(LINKER): jsoo_link.$(BEST)
 	mv -f $< $@
 
 
@@ -53,7 +57,7 @@ man/$(COMPILER).1: $(COMPILER)
 	mkdir -p man
 	./$(COMPILER) --help=groff >$@
 
-.INTERMEDIATE: jsoo_compile.byte jsoo_compile.opt minify.byte minify.opt
+.INTERMEDIATE: jsoo_compile.byte jsoo_compile.opt minify.byte minify.opt jsoo_link.byte jsoo_link.opt
 
 jsoo_compile.byte: $(COMPOBJS:cmx=cmo)
 	$(OCAMLC) $(SAFESTRING) ${addprefix -package , $(PACKAGES)} -linkpkg -o $@ $^
@@ -63,6 +67,11 @@ jsoo_compile.opt: $(COMPOBJS)
 minify.byte: $(MINIOBJS:cmx=cmo)
 	$(OCAMLC) $(SAFESTRING) ${addprefix -package , $(PACKAGES)} -linkpkg -o $@ $^
 minify.opt: $(MINIOBJS:cmx=cmx)
+	$(OCAMLOPT) $(SAFESTRING) ${addprefix -package , $(PACKAGES)} -linkpkg -g -o $@ $^
+
+jsoo_link.byte: $(LINKEROBJS:cmx=cmo)
+	$(OCAMLC) $(SAFESTRING) ${addprefix -package , $(PACKAGES)} -linkpkg -o $@ $^
+jsoo_link.opt: $(LINKEROBJS:cmx=cmx)
 	$(OCAMLOPT) $(SAFESTRING) ${addprefix -package , $(PACKAGES)} -linkpkg -g -o $@ $^
 
 
@@ -128,7 +137,7 @@ clean:
 	rm -f *.cm[aiox] *.cmxa *.cmxs *.o *.a *.conflicts
 	rm -f lib/*.cm[aiox] lib/*.cmxa lib/*.cmxs lib/*.o lib/*.a
 	rm -f *.opt *.byte
-	rm -f $(MINIFIER) $(COMPILER)
+	rm -f $(MINIFIER) $(COMPILER) $(LINKER)
 	rm -f compiler_version.ml
 	rm -f annot_lexer.ml annot_parser.ml annot_parser.mli
 	rm -f js_lexer.ml js_parser.ml js_parser.mli
@@ -136,7 +145,7 @@ clean:
 	rm -Rf man
 
 .PHONY: depend
-depend: $(OBJS:cmx=mli) $(COMPOBJS:cmx=ml) $(MINIOBJS:cmx=ml) compileArg.mli minifyArg.mli
+depend: $(OBJS:cmx=mli) $(COMPOBJS:cmx=ml) $(MINIOBJS:cmx=ml) $(LINKEROBJS:cmx=ml) compileArg.mli minifyArg.mli
 	echo $^ | xargs -n1 | sort -u | xargs ocamldep > .depend
 
 include .depend
