Misc: install ocamlbuild plugin separatly

--- a/ocamlbuild/Makefile
+++ b/ocamlbuild/Makefile
@@ -4,8 +4,13 @@ include ../Makefile.conf
 
 OCAMLBUILD := ocamlbuild -use-ocamlfind -package bytes
 
+VERSION := $(shell head -n 1 ../VERSION)
+
 all:
 	$(OCAMLBUILD) $(OCAMLBUILD_IMPL)
+
+install-meta:
+	ocamlfind install -patch-version ${VERSION} js_of_ocaml-ocamlbuild META
 
 clean:
 	$(OCAMLBUILD) -clean
